--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Linktree</title>
+  <title>Script Free By HadzzOfficial</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <h1>Linktree</h1>
     <ul>
-      <li><a href="https://www.instagram.com">Instagram</a></li>
-      <li><a href="https://www.twitter.com">Twitter</a></li>
-      <li><a href="https://www.facebook.com">Facebook</a></li>
+      <li><a href="https://www.mediafire.com/file/fg4j9cwwpma4rar/SlimexTzy%2528InstallPanelV3%2529.zip/file">Script Install Panel</a></li>
+      <li><a href="https://www.mediafire.com/file/dm4vppe7q7mv48z/Cpanel_Private_Slime.zip/file">Script Cpanel Button</a></li>
+      <li><a href="https://www.mediafire.com/file/yvafrn9z3susowa/DELTACRASH+V2.zip/file">Script Delta V2</a></li>
       <li><a href="https://www.tiktok.com">TikTok</a></li>
       <li><a href="https://www.youtube.com">YouTube</a></li>
     </ul>
