--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>Linktree</h1>
+    <h1>Script Free HadzzOfficial</h1>
     <ul>
-      <li><a href="https://www.mediafire.com/file/fg4j9cwwpma4rar/SlimexTzy%2528InstallPanelV3%2529.zip/file">Script Install Panel</a></li>
-      <li><a href="https://www.mediafire.com/file/dm4vppe7q7mv48z/Cpanel_Private_Slime.zip/file">Script Cpanel Button</a></li>
-      <li><a href="https://www.mediafire.com/file/yvafrn9z3susowa/DELTACRASH+V2.zip/file">Script Delta V2</a></li>
-      <li><a href="https://www.tiktok.com">TikTok</a></li>
-      <li><a href="https://www.youtube.com">YouTube</a></li>
+      <li><a href="https://www.mediafire.com/file/fg4j9cwwpma4rar/SlimexTzy%2528InstallPanelV3%2529.zip/file">Install Panel</a></li>
+      <li><a href="https://www.mediafire.com/file/dm4vppe7q7mv48z/Cpanel_Private_Slime.zip/file">Cpanel Button</a></li>
+      <li><a href="https://www.mediafire.com/file/yvafrn9z3susowa/DELTACRASH+V2.zip/file">Delta V2</a></li>
+      <li><a href="https://www.mediafire.com/file/3dnv4w14g3d0q1u/Clara_XV4_%2540PAEDULZ.zip/file">Clara XV4</a></li>
+      <li><a href="https://www.mediafire.com/file/62y8vaiq842unqd/%2540Alwaysaqioo.zip/file">Always Qio V17</a></li>
+      <li><a href="https://www.mediafire.com/file/nbsqr0wicwy3zlw/sc_spam_pairing_kode.zip/file">Script Spam Pairing</a></li>
     </ul>
   </div>
 </body>
