--- a/index.html
+++ b/index.html
@@ -20,3 +20,14 @@
   </div>
 </body>
 </html>
+
+<head>
+<html>
+  <title>image</title>
+</head>
+<html>
+
+  <img src="mengkece.jpg">
+
+</body>
+</html>
