--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Script Free By HadzzOfficial</title>
+  <title>Script Free © HadzzOfficial</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+  
+  
   <div class="container">
-    <h1>Script Free HadzzOfficial</h1>
+    <h1>   List Script Free HadzzOfficial</h1>
     <ul>
-      <li><a href="https://www.mediafire.com/file/fg4j9cwwpma4rar/SlimexTzy%2528InstallPanelV3%2529.zip/file">Install Panel</a></li>
-      <li><a href="https://www.mediafire.com/file/dm4vppe7q7mv48z/Cpanel_Private_Slime.zip/file">Cpanel Button</a></li>
-      <li><a href="https://www.mediafire.com/file/yvafrn9z3susowa/DELTACRASH+V2.zip/file">Delta V2</a></li>
-      <li><a href="https://www.mediafire.com/file/3dnv4w14g3d0q1u/Clara_XV4_%2540PAEDULZ.zip/file">Clara XV4</a></li>
-      <li><a href="https://www.mediafire.com/file/62y8vaiq842unqd/%2540Alwaysaqioo.zip/file">Always Qio V17</a></li>
-      <li><a href="https://www.mediafire.com/file/nbsqr0wicwy3zlw/sc_spam_pairing_kode.zip/file">Script Spam Pairing</a></li>
-    </ul>
+      <li><a href="https://www.mediafire.com/file/fg4j9cwwpma4rar/SlimexTzy%2528InstallPanelV3%2529.zip/file">1.Install Panel</a></li>
+      <li><a href="https://www.mediafire.com/file/dm4vppe7q7mv48z/Cpanel_Private_Slime.zip/file">2.Cpanel Button</a></li></text-overlay>
+      <li><a href="https://www.mediafire.com/file/yvafrn9z3susowa/DELTACRASH+V2.zip/file">3.Delta V2</a></li>
+      <li><a href="https://www.mediafire.com/file/3dnv4w14g3d0q1u/Clara_XV4_%2540PAEDULZ.zip/file">4.Clara XV4</a></li>
+      <li><a href="https://www.mediafire.com/file/62y8vaiq842unqd/%2540Alwaysaqioo.zip/file">5.Always Qio V17</a></li>
+      <li><a href="https://www.mediafire.com/file/nbsqr0wicwy3zlw/sc_spam_pairing_kode.zip/file">6.Script Spam Pairing</a></li>
+      <li><a href="https://www.mediafire.com/file/he4q7nqi0dkwqlc/xbug9(crack+aphrodite).zip/file">7.Xbug v9</a></li>
+      <li><a href="https://www.mediafire.com/file/khrakqv4nidaqdu/ZENO-V4.zip/file">8.Zeno v8</a></li>
+   </ul>
   </div>
 </body>
 </html>
